--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,10 @@
-baseURL      = "https://www.example.com/"
-title        = "Gallery Deluxe"
+baseURL      = "https://staticbattery.com/"
+title        = "staticbattery.com"
 disableKinds = ["section", "taxonomy", "term"]
 
 [params]
     # Set to enable Plausible Analytics.
-    plausible_domain = ""
+    plausible_domain = "staticbattery.com"
 
     [params.gallerydeluxe]
         # Shuffle the images in the gallery to give the impression of a new gallery each page load.
@@ -50,5 +50,8 @@ disableKinds = ["section", "taxonomy", "term"]
     [[module.mounts]]
         source = "static"
         target = "static"
+    [[module.mounts]]
+        source = '/Users/bep/Pictures/Albums/Staticbattery'
+        target = 'content/images'
     [[module.imports]]
         path = "github.com/bep/gallerydeluxe"
